ihb-platform/HealthService/k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
